--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.oasisakari.akaribotintellijplatformplugin
-pluginName = akari-bot-intellij-platform-plugin
-pluginRepositoryUrl = https://github.com/OasisAkari/akari-bot-intellij-platform-plugin
+pluginGroup = com.github.teahousestudios.akaribotdevplugin
+pluginName = akaribot-dev-plugin
+pluginRepositoryUrl = https://github.com/Teahouse-Studios/akaribot-dev-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
