--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,6 +5,10 @@
     <vendor>TeahouseStudios</vendor>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.python-core-capable</depends>
+    <depends>com.intellij.modules.python</depends>
+
+
 
     <resource-bundle>messages.MyBundle</resource-bundle>
 
@@ -12,6 +16,7 @@
         <completion.contributor language="any" implementationClass="com.github.teahousestudios.akaribotdevplugin.completion.JsonCompletionContributor"/>
         <notificationGroup id="Akaribot-Plugin" displayType="BALLOON" />
         <postStartupActivity implementation="com.github.teahousestudios.akaribotdevplugin.listeners.JsonFileChangeStartupActivity"/>
+        <lang.foldingBuilder language="Python" implementationClass="com.github.teahousestudios.akaribotdevplugin.folding.LocaleStringFoldingBuilder"/>
     </extensions>
 
 </idea-plugin>
