--- a/gradle.properties
+++ b/gradle.properties
@@ -1,23 +1,24 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.teahousestudios.akaribotdevplugin
+pluginGroup = com.github.teahousestudios.akaribot.devplugin
 pluginName = akaribot-dev-plugin
 pluginRepositoryUrl = https://github.com/Teahouse-Studios/akaribot-dev-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 243
+pluginSinceBuild = 252.23892.409
+pluginUntilBuild = 252.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
-platformType = IC
-platformVersion = 2024.3.6
+platformType = PC
+platformVersion = 2025.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
 platformPlugins =
 # Example: platformBundledPlugins = com.intellij.java
-platformBundledPlugins =
+platformBundledPlugins = org.toml.lang
 # Example: platformBundledModules = intellij.spellchecker
 platformBundledModules =
 
@@ -25,7 +26,7 @@ platformBundledModules =
 gradleVersion = 9.0.0
 
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
-kotlin.stdlib.default.dependency = false
+kotlin.stdlib.default.dependency = true
 
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 org.gradle.configuration-cache = true
