--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.teahousestudios.akaribot.devplugin
-pluginName = akaribot-dev-plugin
-pluginRepositoryUrl = https://github.com/Teahouse-Studios/akaribot-dev-plugin
+pluginName = akari-bot-dev
+pluginRepositoryUrl = https://github.com/Teahouse-Studios/akari-bot-dev-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
