--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.teahousestudios.akaribotdevplugin</id>
+    <id>com.github.teahousestudios.akaribot.dev</id>
     <name>Akaribot-Dev</name>
     <vendor>TeahouseStudios</vendor>
 
